<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reg_newprofile"
        android:textColor="@color/primary"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/kakayato_huina"
        android:textColor="@color/primary"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="350dp"
        android:layout_height="310dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_shape">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_input"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_input"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_input"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_input"
                android:hint="Повторите пароль"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeat_password_input"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button"
            android:text="@string/registration"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/footer_TextView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_in"
        android:textColor="@color/primary"
        android:textSize="18sp" />
</RelativeLayout>